--- a/OnePage/index.html
+++ b/OnePage/index.html
@@ -26,7 +26,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li> <a href="#myModal" role="button" class="btn" data-toggle="modal">Add Story</a></li>
-                    <li> <a role="button" class="btn" ng-click="clearBoard()">Clear Board</a></li>
+                    <li> <a role="button" class="btn" ng-click="resetBoard()">Reset Board</a></li>
                 </ul>
             </div>
         </div>
@@ -40,11 +40,19 @@
 
                 <ul class="list-group" data-status="{{card.status}}">
                     <li ng-repeat="story in card.stories" class="list-group-item" jqsortable ng-model="story">
-                        <!-- <span class="glyphicon glyphicon-pencil" ng-click="editStory(story)"></span>-->
+
+                        <span class="glyphicon glyphicon-refresh" ng-click="flip()"></span>
                         <span class="glyphicon glyphicon-remove" ng-click="removeStory()"></span>
-                        <span class="badge">{{story.points}}</span>
-                        <div contenteditable="true" ng-model="title">{{story.title}}</div>
-                        <select ng-model="cardId" ng-change="setPosition()" ng-options="c.status as c.title for c in board.cards"></select>
+                        <div class=" item {{card.cssClass}}" >
+                            <div class="front">
+                                <span class="badge">{{story.points}}</span>
+                                <div contenteditable="true" ng-model="title">{{story.title}}</div>
+                                <select ng-model="cardId" ng-change="setPosition()" ng-options="c.status as c.title for c in board.cards"></select>
+                            </div>
+                            <div class="back">
+                                <div contenteditable="true" ng-model="criteria">{{story.criteria}}</div>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -52,7 +60,7 @@
             <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <form ng-submit="addStory()">
+                        <form ng-submit="addStory()" id="modalForm">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                                 <h4 class="modal-title" id="myModalLabel">Add Story</h4>
@@ -64,19 +72,15 @@
                                     <input type="text" id="title" name="title" value="" ng-model="title" required />
 
                                     <label for="points">Points</label>
-                                    <select id="points" ng-model="points">
-                                        <option ng-repeat="point in board.points" value="{{point}}">{{point}}</option>
-                                    </select>
+                                    <select id="points" ng-model="board.point" required name="points" ng-options="p.point for p in board.points"></select>
 
                                     <label for="status">Status</label>
-                                    <select id="status" ng-model="status">
-                                        <option ng-repeat="card in board.cards" value="{{card.status}}">{{card.title}}</option>
-                                    </select>
+                                    <select id="status" ng-model="board.status" required name="status" ng-options="c.status as c.title for c in board.cards"></select>
                                 </p>
 
                                 <p>
                                     Acceptance Criteria
-                                    <textarea id="criteria" name="criteria" required cols="75" rows="4" ng-model="criteria"> </textarea>
+                                    <textarea id="criteria" name="criteria" required rows="3" class="form-control" ng-model="criteria"> </textarea>
                                 </p>
 
                             </div>
