--- a/OnePage/index.html
+++ b/OnePage/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Angular Scrum Board</title>
-    <link href="css/site.css" rel="stylesheet" type="text/css" />
     <link href="css/bootstrap.css" rel="stylesheet" />
+    <link href="css/site.css" rel="stylesheet" type="text/css" />
+    
     <link href="css/jquery-ui.css" rel="stylesheet" />
     <script src="js/angular.min.js"></script>
 
@@ -33,10 +34,10 @@
     </header>
 
 
-    <div class="container">
+    <div class="container board" style="display: none;">
         <div class="row">
-            <div class="col-md-2" ng-repeat="card in board.cards">
-                <h2>{{card.title}}</h2>
+            <div class="col-xs-3" ng-repeat="card in board.cards">
+                <h2>{{card.title}} </h2>
 
                 <ul class="list-group" data-status="{{card.status}}" droppable id="{{card.cardInfo}}" ng-model="card">
                     <li ng-repeat="story in card.stories" class="list-group-item" ng-model="story" draggable id="{{story.storyId}}">
