--- a/OnePage/index.html
+++ b/OnePage/index.html
@@ -34,23 +34,23 @@
     </header>
 
 
-    <div class="container board" style="display: none;">
+    <div class="container board">
         <div class="row">
             <div class="col-xs-3" ng-repeat="card in board.cards">
-                <h2>{{card.title}} </h2>
+                <h2 ng-bind="card.title"> </h2>
 
                 <ul class="list-group" data-status="{{card.status}}" droppable id="{{card.cardInfo}}" ng-model="card">
                     <li ng-repeat="story in card.stories" class="list-group-item" ng-model="story" draggable id="{{story.storyId}}">
                         <span class="glyphicon glyphicon-remove" ng-click="removeStory()"></span>
                         <span class="glyphicon glyphicon-refresh pull-right" ng-click="flip()"></span>
 
-                        <div class=" item {{card.cssClass}}">
+                        <div class="item {{card.cssClass}}">
                             <div class="front">
-                                <span class="badge">{{story.points}}</span>
-                                <div contenteditable="true" ng-model="title">{{story.title}}</div>
+                                <span class="badge" ng-bind="story.points"></span>
+                                <div contenteditable="true" ng-model="title" ng-bind="story.title"></div>
                             </div>
                             <div class="back">
-                                <div contenteditable="true" ng-model="criteria">{{story.criteria}}</div>
+                                <div contenteditable="true" ng-model="criteria" ng-bind="story.criteria"></div>
                             </div>
                         </div>
                     </li>
